<resources>
    <string name="app_name">Ideenplattform</string>
    <string name="title_home_idea">Ideas</string>
    <string name="title_top_ranked_ideas">Top Ranked</string>
    <string name="title_profile">Profile</string>
    <string name="title_register_idea">Register</string>
    <string name="title_details_idea">Idea Details</string>
    <string name="title_edit_idea">Edit Idea</string>
    <string name="title_new_idea">add Idea</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="idea_picture">Idea picture</string>
    <string name="submit">Submit</string>
    <string name="rate_image">Rating</string>
    <string name="comments">Comments</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="select_category">select category</string>
    <string name="option">options</string>
    <string name="share_idea">share it</string>
    <string name="share_idea_title">share the Idea</string>
    <string name="abort">abort</string>
    <string name="edit_profile">edit Profile</string>
    <string name="add_idea_image_details">add Idea</string>
    <string name="sign_out">sign out</string>
    <string name="first_name">Firstname</string>
    <string name="last_name">Lastname</string>
    <string name="profile_firstname">Firstname : </string>
    <string name="profile_lastname">Lastname : </string>
    <string name="profile_role">Role : </string>
    <string name="upload">Upload</string>
    <string name="edit">Edit</string>
    <string name="idea_image">idea Image</string>
    <string name="add_comment">add Comment</string>
    <string-array name="rating_data">
        <item>Really cool</item>
        <item>Cool</item>
        <item>Okay</item>
        <item>Not so cool</item>
        <item>Really bad</item>
    </string-array>
    <string name="save_changes">save changes</string>
    <string name="internet_error">No Internet connection</string>
    <string name="description_error">description Is Empty</string>
    <string name="idea_name_error">Idea Title Missing</string>
    <string name="password_confirm">password confirm</string>
    <string name="passowrd_confirm_error">confirm password please</string>
    <string name="firstname_error">first name is missing</string>
    <string name="password_error">password is missing</string>
    <string name="lastname_error">last name is missing</string>
    <string name="delete_image">Are you sure you want to delete the Image?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="updated">Updated</string>
    <string name="deleted">deleted</string>
    <string name="email">Email</string>
    <string name="all_ideas">all ideas</string>
    <string-array name="sort_type">
        <item>most rated</item>
        <item>less rated</item>
        <item>create date</item>
        <item>last update</item>
        <item>most comments</item>
        <item>shuffle</item>
    </string-array>
    <string name="title_activity_authentication" translatable="false">AuthenticationActivity</string>

    <string name="email_error">Email Error</string>
    <string name="created">created</string>
    <string name="email_already_registerd">Email already registered</string>
</resources>