<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.newidee.ManagementIdeaFragment">


            <ImageView
                android:id="@+id/iv_idea_image"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:contentDescription="@string/idea_image"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/btn_upload_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/placeholder"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_upload_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:visibility="visible"
                app:cornerRadius="@dimen/_3sdp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_idea_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_idea_image"
                app:layout_constraintTop_toTopOf="@+id/iv_idea_image"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/name"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="@dimen/_3sdp"
                app:helperText="@string/name"
                app:layout_constraintBottom_toTopOf="@+id/et_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier4">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/description"
                app:helperText="@string/description"
                app:layout_constraintBottom_toTopOf="@+id/sp_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_75sdp"
                    android:gravity="top"
                    android:maxHeight="@dimen/_75sdp"
                    android:scrollbars="none"
                    android:scrollHorizontally="true"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatSpinner

                android:id="@+id/sp_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:labelFor="@id/sp_category"
                android:minHeight="48dp"
                android:overlapAnchor="false"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toTopOf="@+id/btn_add_idea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_description"
                tools:ignore="SpeakableTextPresentCheck" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_idea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/black"
                app:cornerRadius="@dimen/_3sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sp_category"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="iv_idea_image" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>